<resources>
    <string name="app_name">NMedia</string>
    <string name="nMedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like_button">Like</string>
    <string name="description_share_button">Share</string>
    <string name="description_views_button">Views</string>
    <string name="post_text">Post text</string>
    <string name="description_post_add">Add post</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_message">Edit message</string>
    <string name="cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save post</string>
    <string name="description_video">Video</string>
    <string name="description_play_video">Play video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s published new post:</string>
    <string name="notification_default">New notification from NMedia</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="load_new_posts_button">New posts</string>
    <string name="description_load_new_posts">Load new posts</string>
    <string name="add_post">Add post</string>
    <string name="clear">Clear</string>
    <string name="fragment_feed_title">Feed</string>
    <string name="fragment_new_post_title">New Post</string>
    <string name="description_full_screen_image">Full screen image</string>
    <string name="image">Image</string>
    <string name="description_preview">Image preview</string>
    <string name="description_choose_gallery">Choose image from the gallery</string>
    <string name="description_make_photo">Make a photo</string>
    <string name="retry">Retry</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <!-- Authorization, registration -->
    <string name="signIn">Sign in</string>
    <string name="signOut">Sign out</string>
    <string name="register">Register</string>
    <string name="your_login">Your login</string>
    <string name="your_password">Your password</string>
    <string name="login_now">Login Now</string>
    <string name="invalidAuth">Invalid login/password</string>
    <string name="blankAuth">Login or password is blank</string>
    <string name="confirm_signOut">Are you sure?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="match_passwords">Passwords must match</string>
    <string name="blankRegister">Name, login or password is blank</string>
    <string name="ad">Ad</string>


</resources>