<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/post_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing"
                tools:text="@tools:sample/lorem[150]" />

            <FrameLayout
                android:id="@+id/preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars[8]"
                    android:contentDescription="@string/description_preview" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/clear" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?colorPrimary">

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_add_photo_gallery_24"
            android:contentDescription="@string/description_choose_gallery" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            app:srcCompat="@drawable/ic_add_a_photo_24"
            android:contentDescription="@string/description_make_photo" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>